2004-11-21  Mark Kettenis  <kettenis@gnu.org>

	* config/pa/hppahpux.mh: Remove file.
	* config/pa/hpux1020.mh: Remove file.

2004-11-20  Andreas Schwab  <schwab@suse.de>

	* configure.host: Set host floatformat for m68k.

2004-11-20  Eli Zaretskii  <eliz@gnu.org>

	* config/djgpp/fnchange.lst: Resolve file-name clash between
	hppa-hpux-tdep.c and the new hppa-hpux-nat.c.

2004-11-20  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-nat.c: New file.
	* config/pa/hpux.mh (NATDEPFILES): New file.
	* Makefile.in (ALLDEPFILES): Add hppa-hpux-nat.c.
	(hppa-hpux-nat.o): New dependency.
	* configure.host: Remove hppa*-*-hpux10.20.
	(hppa*-*-hpux*, hppa*-*-hiux*): Set gdb_host to hpux.mh.

	* inf-ptrace.c: Fix coding style.

	* gdb_ptrace.h [PTRACE_TYPE_ARG5] (ptrace): New macro.
	* infptrace.c (call_ptrace): Simply call ptrace with four
	arguments.

	* dbxread.c (process_one_symbol): Fix a few coding standard
	issues.  Improve code formatting.

	* dbxread.c: Include "gdb_string.h".
	(record_minimal_symbol, read_ofile_symtab): Replace
	DEPRECATED_STREQ and DEPRECATED_STREQN with strcmp and strncmp.
	* Makefile.in (dbxread.o): Update dependencies.

	* dwarf2-frame.c (read_encoded_value): Correctly calculate number
	of bytes read for aligned LEB128 encodings.

2004-11-19  Mark Kettenis  <kettenis@gnu.org>

	* bsd-kvm.c (bsd_kvm_pcb_cmd): Cast return value from
	parse_and_eval_address to u_long before converting it to a pointer
	type.
	* i386fbsd-nat.c (_initialize_i386fbsd_nat): Change type of
	ps_strings from int to u_long.
	* i386obsd-nat.c (_initialize_i386obsd_nat): Cast _ps.val to
	u_long instead of CORE_ADDR.

2004-11-18  Mark Kettenis  <kettenis@gnu.org>

	* dbxread.c (process_one_symbol): Do not adjust address of first
	N_SLINE stab for a function for code generated by non-GCC
	compilers.

2004-11-18  Kevin Buettner  <kevinb@redhat.com>

	* solib-null.c: New file.

2004-11-17  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Drop MIPS and remote.
